unpackaged/main/default/objects/DFP_Token__c/DFP_Token__c.object-meta.xml
<CustomObject>
    <description>Introduced as part of the Quick Bridge to National Funding migration project to support one customer/lead seeing multiple DFP experiences (QB and/or NF). Originally DFP tokens were shown under the Encrypted Email String field on Contact/Lead.</description>
    <label>DFP Token</label>
    <nameField>
        <label>DFP Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DFP Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>