unpackaged/main/default/objects/DFP_Token__c/fields/Brand_Experience__c.field-meta.xml
<CustomField>
    <fullName>Brand_Experience__c</fullName>
    <description>This field should control which DFP experience the guarantors see when loading the corresponding token (payload). This field is used in conjunction with Opportunity - Brand Experience field to present the correct opportunity for the payload being used.</description>
    <label>Brand Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Originating_Brand</valueSetName>
    </valueSet>
</CustomField>