unpackaged/main/default/objects/DFP_Token__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DFP Tokens</relationshipLabel>
    <relationshipName>DFP_Tokens</relationshipName>
    <type>Lookup</type>
</CustomField>