unpackaged/main/default/objects/DFP_Token__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>This field holds the token/payload for the corresponding brand experience. When loading this payload, DFP frontend will find the correct opportunity by matching the brand experience. This was previously the Encrypted Email String field on the Lead and Contact</description>
    <label>Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>